syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";


package task;

service TaskManager {
    rpc GetTask(GetTaskRequest) returns (Task) {
        option (google.api.http) = {
            get: "/v1/tasklist-gateway/task/{id}"
        };
    }
    rpc GetTaskList(google.protobuf.Empty) returns (stream Task) {
        option (google.api.http) = {
            get: "/v1/tasklist-gateway/task"
        };
    }
}

message Task {
    string id = 1;
    string body = 2;
}

message GetTaskRequest {
    string id = 1;
}

